Reworked summaries a bit, possibly have a new way to render guides

--- a/SimTECH/SimTECH/Pages/Guide/Index.razor
+++ b/SimTECH/SimTECH/Pages/Guide/Index.razor
@@ -76,7 +76,7 @@
             Title = "Racing info",
             Icon = Icons.Custom.Uncategorized.Folder,
             ExpandedIcon = Icons.Custom.Uncategorized.FolderOpen,
-            Type = typeof(RaceweekTopic),
+            Type = typeof(Shared.GuideItems.RaceweekTopic),
             Order = 10,
             Children = new()
             {
