--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Dialogs/Components/SummaryEntrantDisplay.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Dialogs/Components/SummaryEntrantDisplay.razor
@@ -13,7 +13,7 @@
         <ScreenshotIconButton TargetId="@EntrantSummary.SummaryElementId" />
     </ToolBarContent>
     <HeaderContent>
-        <MudTd>Name</MudTd>
+        <MudTh>Name</MudTh>
         @foreach (var (asp, index) in EntrantAspects.WithIndex())
         {
             <MudTh Class="@($"overflow-hider {InspectTheWheel(index)}")">
