--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Index.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Index.razor
@@ -394,7 +394,7 @@
                 EntrantId = e.Id,
                 EntrantGroup = DevelopModel.ActiveEntrant,
                 DevelopedAspect = DevelopModel.ActiveAspect,
-                Initial = e.Old,
+                //Initial = e.Old,
                 Change = e.Change,
                 AfterRound = lastCompletedRound,
                 SeasonId = SeasonId,
