--- a/SimTECH/SimTECH/Pages/Test/Index.razor
+++ b/SimTECH/SimTECH/Pages/Test/Index.razor
@@ -118,6 +118,7 @@
     int? rangeLow, rangeHigh;
 
     private bool loading;
+    private bool otherLoading = true;
     private string initText = "unchanged init";
     private string setText = "unchanged set";
 
