--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -407,10 +407,6 @@ th {
     font-family: var(--mud-typography-button-family);
 }
 
-.fontsize-button-text {
-    font-size: 0.95rem;
-}
-
 .font-header {
     font-family: var(--mud-typography-h1-family);
 }
@@ -438,6 +434,22 @@ th {
 
 .font-roadrage {
     font-family: RoadRage !important;
+}
+
+.fontsize-button-text {
+    font-size: 0.95rem;
+}
+
+.text-tiny {
+    font-size: 0.5rem;
+}
+
+.tiny-text-list-item {
+    max-width: 50px;
+    font-size: 0.69rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 /* inputs */
