--- a/SimTECH/SimTECH/Pages/Engines/Index.razor
+++ b/SimTECH/SimTECH/Pages/Engines/Index.razor
@@ -2,8 +2,8 @@
 
 @using SimTECH.Pages.Engines.Dialogs
 
-@inject BreadcrumbProvider _bread
 @inject EngineService _engineService
+@inject BreadcrumbProvider _bread
 @inject IDialogService _dialogService
 
 <PageTitle>Engines</PageTitle>
@@ -14,23 +14,39 @@
             <MudText Typo="Typo.h3">Engines</MudText>
             <MudSpacer />
             <MudButtonGroup Variant="Variant.Outlined" Color="Color.Tertiary" Size="Size.Small">
-                <MudButton StartIcon="@Icons.Material.Filled.Archive" IconSize="Size.Small" OnClick="ToggleDisplayArchived" Class="btn-md">
-                    @(showingArchived ? "Active" : "Archive")
+                <MudButton StartIcon="@Icons.Material.Filled.Archive"
+                           IconSize="Size.Small"
+                           OnClick="ToggleDisplayArchived"
+                           Class="btn-md">
+                    @(ShowingArchived ? "Active" : "Archive")
                 </MudButton>
-                <MudButton StartIcon="@Icons.Material.Filled.Add" IconSize="Size.Small" OnClick="AddEngine" Class="btn-md">
+                <MudButton StartIcon="@Icons.Material.Filled.Add"
+                           IconSize="Size.Small"
+                           OnClick="AddEngine"
+                           Class="btn-md">
                     New
                 </MudButton>
             </MudButtonGroup>
         </MudStack>
     </MudPaper>
-    <MudDataGrid T="Engine" Items="@engines" RowsPerPage="15" Dense="true">
+    <MudDataGrid T="Engine" Items="@Engines" RowsPerPage="15" Dense="true">
         <Columns>
             <PropertyColumn Property="e => e.Name" />
+            <TemplateColumn Title="Badge" HeaderClass="number-col">
+                <CellTemplate>
+                    <NumberDisplay Colour="@context.Item.Colour" Accent="@context.Item.Accent" Typo="Typo.button">
+                        @context.Item.Name.ElementAt(0)
+                    </NumberDisplay>
+                </CellTemplate>
+            </TemplateColumn>
             <TemplateColumn T="Engine">
                 <CellTemplate>
-                    <MudButtonGroup Size="@Size.Small">
-                        <MudIconButton Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateEngine(context.Item))" />
-                        <MudIconButton Icon="@Icons.Material.Outlined.Delete" Color="Color.Error" OnClick="@(async () => await DeleteEngine(context.Item))" />
+                    <MudButtonGroup Size="Size.Small">
+                        <MudIconButton Icon="@Icons.Material.Outlined.Edit"
+                                       OnClick="@(async () => await UpdateEngine(context.Item))" />
+                        <MudIconButton Icon="@Icons.Material.Outlined.Delete"
+                                       Color="Color.Error"
+                                       OnClick="@(async () => await DeleteEngine(context.Item))" />
                     </MudButtonGroup>
                 </CellTemplate>
             </TemplateColumn>
@@ -42,9 +58,9 @@
 </MudContainer>
 
 @code {
-    private List<Engine> engines = new();
+    private List<Engine> Engines { get; set; } = new();
 
-    private bool showingArchived = false;
+    private bool ShowingArchived { get; set; } = false;
 
     protected override async Task OnInitializedAsync()
     {
@@ -54,7 +70,7 @@
             new BreadcrumbItem("Engines", href: "engines", disabled: true),
         });
 
-        engines = await _engineService.GetEngines();
+        Engines = await _engineService.GetEngines();
     }
 
     private async Task AddEngine() => await UpdateEngine(null);
@@ -68,23 +84,23 @@
         if (!result.Canceled && result.Data != null && result.Data is Engine updatedItem)
         {
             await _engineService.UpdateEngine(updatedItem);
-            engines = await _engineService.GetEngines();
+            Engines = await _engineService.GetEngines();
         }
     }
 
     private async Task DeleteEngine(Engine engine)
     {
         await _engineService.ArchiveEngine(engine);
-        engines.Remove(engine);
+        Engines.Remove(engine);
     }
 
     private async Task ToggleDisplayArchived()
     {
-        if (showingArchived)
-            engines = await _engineService.GetEngines();
+        if (ShowingArchived)
+            Engines = await _engineService.GetEngines();
         else
-            engines = await _engineService.GetEngines(StateFilter.Archived);
+            Engines = await _engineService.GetEngines(StateFilter.Archived);
 
-        showingArchived = !showingArchived;
+        ShowingArchived = !ShowingArchived;
     }
 }
